[UPDATE] Ranks, Tickets, TR8, WelcomeMessage, Main && [REMOVE] ComResources && [ADD] VeteranMessage, Reputation, VoiceActivity, FontUtils, ResourcesManager