@@ -1,5 +1,6 @@
-package ca.lwi.trqcbot.commands.list;
+package ca.lwi.trqcbot.ressources;
 
+import ca.lwi.trqcbot.Main;
 import com.mongodb.client.MongoCollection;
 import net.dv8tion.jda.api.entities.Role;
 import net.dv8tion.jda.api.entities.channel.ChannelType;
@@ -8,9 +9,6 @@ import net.dv8tion.jda.api.events.interaction.ModalInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.command.SlashCommandInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.component.ButtonInteractionEvent;
 import net.dv8tion.jda.api.events.interaction.component.StringSelectInteractionEvent;
-import net.dv8tion.jda.api.interactions.commands.DefaultMemberPermissions;
-import net.dv8tion.jda.api.interactions.commands.OptionType;
-import net.dv8tion.jda.api.interactions.commands.build.SubcommandData;
 import net.dv8tion.jda.api.interactions.components.ActionRow;
 import net.dv8tion.jda.api.interactions.components.buttons.Button;
 import net.dv8tion.jda.api.interactions.components.selections.StringSelectMenu;
@@ -21,16 +19,15 @@ import org.bson.Document;
 import org.jetbrains.annotations.NotNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import ca.lwi.trqcbot.Main;
-import ca.lwi.trqcbot.commands.Command;
-import ca.lwi.trqcbot.handlers.ResourcesMessageHandler;
 
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 
-public class ComResources extends Command {
+public class ResourcesManager {
 
-    private final Logger LOGGER = LoggerFactory.getLogger(ComResources.class);
+    private final Logger LOGGER = LoggerFactory.getLogger(ResourcesManager.class);
+    private boolean listenersRegistered = false;
+
     private final String COLLECTION_NAME = "resources";
 
     // Section keys for MongoDB
@@ -59,72 +56,18 @@ public class ComResources extends Command {
     // Cache section choice for each user
     private final Map<String, String> userSectionChoices = new HashMap<>();
 
-    private boolean listenersRegistered = false;
-
-    public ComResources() {
-        super("resources", "Gérer le message du salon ressources");
-
-        // Restricted to admins
-        setDefaultPermissions(DefaultMemberPermissions.DISABLED);
-
-        // Create simplified subcommands
-        SubcommandData updateCmd = new SubcommandData("update", "Mettre à jour le message");
-        updateCmd.addOption(OptionType.BOOLEAN, "force_new", "Créer un nouveau message même si un existe déjà", false);
-
-        SubcommandData manageCmd = new SubcommandData("manage", "Gérer les sections et les éléments du message");
-
-        SubcommandData viewConfigCmd = new SubcommandData("view", "Afficher la configuration actuelle");
-
-        addSubcommands(updateCmd, manageCmd, viewConfigCmd);
-    }
-
     public void registerEventListeners(net.dv8tion.jda.api.JDA jda) {
         if (!this.listenersRegistered) {
-                jda.addEventListener(
-                        new ResourcesButtonListener(),
-                        new ResourcesSelectMenuListener(),
-                        new ResourcesModalListener()
-                );
-                this.listenersRegistered = true;
+            jda.addEventListener(
+                    new ResourcesButtonListener(),
+                    new ResourcesSelectMenuListener(),
+                    new ResourcesModalListener()
+            );
+            this.listenersRegistered = true;
         }
     }
 
-    @Override
-    public void onSlash(SlashCommandInteractionEvent e) {
-        if (!e.isFromGuild()) {
-            e.reply("Cette commande ne peut être utilisée que sur un serveur.").setEphemeral(true).queue();
-            return;
-        }
-
-        String subcommandName = e.getSubcommandName();
-        if (subcommandName == null) {
-            e.reply("Veuillez spécifier une sous-commande.").setEphemeral(true).queue();
-            return;
-        }
-
-        try {
-            switch (subcommandName.toLowerCase()) {
-                case "update":
-                    e.deferReply(true).queue();
-                    handleUpdate(e);
-                    break;
-                case "manage":
-                    handleManage(e);
-                    break;
-                case "view":
-                    e.deferReply(true).queue();
-                    handleViewConfig(e);
-                    break;
-                default:
-                    e.reply("Sous-commande inconnue.").setEphemeral(true).queue();
-            }
-        } catch (Exception ex) {
-            LOGGER.error("Erreur lors de l'exécution de la commande {}: {}", subcommandName, ex.getMessage());
-            e.reply("Une erreur est survenue : " + ex.getMessage()).setEphemeral(true).queue();
-        }
-    }
-
-    private void handleUpdate(SlashCommandInteractionEvent e) {
+    public void handleUpdate(SlashCommandInteractionEvent e) {
         boolean forceNew = e.getOption("force_new") != null && Objects.requireNonNull(e.getOption("force_new")).getAsBoolean();
 
         ResourcesMessageHandler.updateResourcesMessage(forceNew)
@@ -138,7 +81,7 @@ public class ComResources extends Command {
                 });
     }
 
-    private void handleManage(SlashCommandInteractionEvent e) {
+    public void handleManage(SlashCommandInteractionEvent e) {
         // Create section selector
         StringSelectMenu sectionSelect = StringSelectMenu.create(SELECT_SECTION)
                 .setPlaceholder("Choisir la section à modifier")
@@ -165,11 +108,11 @@ public class ComResources extends Command {
                 .queue();
     }
 
-    private void handleViewConfig(SlashCommandInteractionEvent e) {
+    public void handleViewConfig(SlashCommandInteractionEvent e) {
         MongoCollection<Document> collection = Main.getMongoConnection().getDatabase().getCollection(COLLECTION_NAME);
         Document configDoc = collection.find(new Document("type", "config")).first();
         if (configDoc == null) {
-            e.getHook().sendMessage("❌ Configuration non trouvée. Veuillez d'abord exécuter /resources update.").queue();
+            e.getHook().sendMessage("❌ Configuration non trouvée. Veuillez d'abord exécuter /tr8 resources update.").queue();
             return;
         }
 
@@ -226,18 +169,17 @@ public class ComResources extends Command {
      */
     private class ResourcesButtonListener implements net.dv8tion.jda.api.hooks.EventListener {
         @Override
-        public void onEvent(net.dv8tion.jda.api.events.GenericEvent event) {
-            if (event instanceof ButtonInteractionEvent) {
-                ButtonInteractionEvent e = (ButtonInteractionEvent) event;
-                String buttonId = e.getComponentId();
-                String userId = e.getUser().getId();
+        public void onEvent(@NotNull net.dv8tion.jda.api.events.GenericEvent e) {
+            if (e instanceof ButtonInteractionEvent event) {
+                String buttonId = event.getComponentId();
+                String userId = event.getUser().getId();
                 if (buttonId.startsWith("confirm_delete:")) {
                     String[] parts = buttonId.split(":");
                     String sectionKey = parts[1];
                     String itemName = parts[2];
-                    handleConfirmDelete(e, sectionKey, itemName);
+                    handleConfirmDelete(event, sectionKey, itemName);
                 } else if (buttonId.startsWith("cancel_delete:")) {
-                    e.getHook().sendMessage("Suppression annulée.")
+                    event.getHook().sendMessage("Suppression annulée.")
                             .setEphemeral(true)
                             .queue(message -> {
                                 message.delete().queueAfter(3, java.util.concurrent.TimeUnit.SECONDS);
@@ -245,19 +187,19 @@ public class ComResources extends Command {
                 } else {
                     switch (buttonId) {
                         case BTN_ADD:
-                            handleAddButtonClick(e, userId);
+                            handleAddButtonClick(event, userId);
                             break;
                         case BTN_EDIT:
-                            handleEditButtonClick(e, userId);
+                            handleEditButtonClick(event, userId);
                             break;
                         case BTN_DELETE:
-                            handleDeleteButtonClick(e, userId);
+                            handleDeleteButtonClick(event, userId);
                             break;
                         case BTN_SERVER_NAME:
-                            handleServerNameButtonClick(e);
+                            handleServerNameButtonClick(event);
                             break;
                         case BTN_BACK_TO_SECTIONS:
-                            handleBackToSectionsButton(e);
+                            handleBackToSectionsButton(event);
                             break;
                     }
                 }
@@ -320,7 +262,7 @@ public class ComResources extends Command {
          */
         private void handleAddRoleOrChannel(ButtonInteractionEvent e, String sectionKey) {
             if (sectionKey.equals(SECTION_ROLES)) {
-                List<Role> roles = e.getGuild().getRoles();
+                List<Role> roles = Objects.requireNonNull(e.getGuild()).getRoles();
                 StringSelectMenu.Builder menuBuilder = StringSelectMenu.create(SELECT_ROLE).setPlaceholder("Sélectionner un rôle").setMaxValues(1);
                 for (Role role : roles) {
                     if (!role.isManaged() && !role.isPublicRole()) {
@@ -329,7 +271,7 @@ public class ComResources extends Command {
                 }
                 e.reply("Choisissez un rôle à ajouter:").addComponents(ActionRow.of(menuBuilder.build())).setEphemeral(true).queue();
             } else if (sectionKey.equals(SECTION_CHANNELS)) {
-                List<GuildChannel> channels = e.getGuild().getChannels();
+                List<GuildChannel> channels = Objects.requireNonNull(e.getGuild()).getChannels();
                 StringSelectMenu.Builder menuBuilder = StringSelectMenu.create(SELECT_CHANNEL).setPlaceholder("Sélectionner un salon").setMaxValues(1);
                 for (GuildChannel channel : channels) {
                     if (channel.getType().isMessage() || channel.getType().isThread() || channel.getType() == ChannelType.FORUM) {
@@ -352,7 +294,7 @@ public class ComResources extends Command {
             MongoCollection<Document> collection = Main.getMongoConnection().getDatabase().getCollection(COLLECTION_NAME);
             Document configDoc = collection.find(new Document("type", "config")).first();
             if (configDoc == null) {
-                e.reply("❌ Configuration non trouvée. Veuillez d'abord exécuter /resources update.").setEphemeral(true).queue();
+                e.reply("❌ Configuration non trouvée. Veuillez d'abord exécuter /tr8 resources update.").setEphemeral(true).queue();
                 return;
             }
 
@@ -394,7 +336,7 @@ public class ComResources extends Command {
             MongoCollection<Document> collection = Main.getMongoConnection().getDatabase().getCollection(COLLECTION_NAME);
             Document configDoc = collection.find(new Document("type", "config")).first();
             if (configDoc == null) {
-                e.reply("❌ Configuration non trouvée. Veuillez d'abord exécuter /resources update.").setEphemeral(true).queue();
+                e.reply("❌ Configuration non trouvée. Veuillez d'abord exécuter /tr8 resources update.").setEphemeral(true).queue();
                 return;
             }
 
@@ -486,27 +428,25 @@ public class ComResources extends Command {
      */
     private class ResourcesSelectMenuListener implements net.dv8tion.jda.api.hooks.EventListener {
         @Override
-        public void onEvent(net.dv8tion.jda.api.events.GenericEvent event) {
-            if (event instanceof StringSelectInteractionEvent) {
-                StringSelectInteractionEvent e = (StringSelectInteractionEvent) event;
-                String menuId = e.getComponentId();
-
+        public void onEvent(@NotNull net.dv8tion.jda.api.events.GenericEvent e) {
+            if (e instanceof StringSelectInteractionEvent event) {
+                String menuId = event.getComponentId();
                 if (menuId.equals(SELECT_SECTION)) {
-                    handleSectionSelect(e);
+                    handleSectionSelect(event);
                 } else if (menuId.startsWith("edit_item_select:")) {
-                    handleEditItemSelect(e);
+                    handleEditItemSelect(event);
                 } else if (menuId.startsWith("delete_item_select:")) {
-                    handleDeleteItemSelect(e);
+                    handleDeleteItemSelect(event);
                 } else if (menuId.equals(SELECT_CHANNEL)) {
-                    handleChannelSelect(e);
+                    handleChannelSelect(event);
                 } else if (menuId.equals(SELECT_ROLE)) {
-                    handleRoleSelect(e);
+                    handleRoleSelect(event);
                 }
             }
         }
 
         private void handleSectionSelect(StringSelectInteractionEvent e) {
-            String selectedSection = e.getValues().get(0);
+            String selectedSection = e.getValues().getFirst();
             String userId = e.getUser().getId();
 
             // Store the user's selection
@@ -532,7 +472,7 @@ public class ComResources extends Command {
         private void handleEditItemSelect(StringSelectInteractionEvent e) {
             String[] parts = e.getComponentId().split(":");
             String sectionKey = parts[1];
-            String itemName = e.getValues().get(0);
+            String itemName = e.getValues().getFirst();
 
             MongoCollection<Document> collection = Main.getMongoConnection().getDatabase().getCollection(COLLECTION_NAME);
             Document configDoc = collection.find(new Document("type", "config")).first();
@@ -585,7 +525,7 @@ public class ComResources extends Command {
         private void handleDeleteItemSelect(StringSelectInteractionEvent e) {
             String[] parts = e.getComponentId().split(":");
             String sectionKey = parts[1];
-            String itemName = e.getValues().get(0);
+            String itemName = e.getValues().getFirst();
             Button confirmButton = Button.danger("confirm_delete:" + sectionKey + ":" + itemName, "Confirmer");
             Button cancelButton = Button.secondary("cancel_delete:" + sectionKey + ":" + itemName, "Annuler");
             e.reply("⚠️ Êtes-vous sûr de vouloir supprimer **" + itemName + "** ?")
@@ -598,8 +538,8 @@ public class ComResources extends Command {
          * Gestion de la sélection d'un salon
          */
         private void handleChannelSelect(StringSelectInteractionEvent e) {
-            String channelId = e.getValues().get(0);
-            GuildChannel channel = e.getGuild().getGuildChannelById(channelId);
+            String channelId = e.getValues().getFirst();
+            GuildChannel channel = Objects.requireNonNull(e.getGuild()).getGuildChannelById(channelId);
 
             if (channel == null) {
                 e.reply("❌ Salon introuvable.").setEphemeral(true).queue();
@@ -626,8 +566,8 @@ public class ComResources extends Command {
          * Gestion de la sélection d'un rôle
          */
         private void handleRoleSelect(StringSelectInteractionEvent e) {
-            String roleId = e.getValues().get(0);
-            Role role = e.getGuild().getRoleById(roleId);
+            String roleId = e.getValues().getFirst();
+            Role role = Objects.requireNonNull(e.getGuild()).getRoleById(roleId);
 
             if (role == null) {
                 e.reply("❌ Rôle introuvable.").setEphemeral(true).queue();
@@ -656,26 +596,25 @@ public class ComResources extends Command {
      */
     private class ResourcesModalListener implements net.dv8tion.jda.api.hooks.EventListener {
         @Override
-        public void onEvent(@NotNull net.dv8tion.jda.api.events.GenericEvent event) {
-            if (event instanceof ModalInteractionEvent) {
-                ModalInteractionEvent e = (ModalInteractionEvent) event;
-                String modalId = e.getModalId();
-                e.deferReply(true).queue();
+        public void onEvent(@NotNull net.dv8tion.jda.api.events.GenericEvent e) {
+            if (e instanceof ModalInteractionEvent event) {
+                String modalId = event.getModalId();
+                event.deferReply(true).queue();
                 try {
                     if (modalId.startsWith(MODAL_ADD)) {
-                        handleAddModal(e);
+                        handleAddModal(event);
                     } else if (modalId.startsWith(MODAL_EDIT)) {
-                        handleEditModal(e);
+                        handleEditModal(event);
                     } else if (modalId.startsWith(MODAL_DELETE)) {
-                        handleDeleteModal(e);
+                        handleDeleteModal(event);
                     } else if (modalId.equals(MODAL_SERVER_NAME)) {
-                        handleServerNameModal(e);
+                        handleServerNameModal(event);
                     } else if (modalId.startsWith(MODAL_ADD_WITH_SELECTOR)) {
-                        handleAddWithSelectorModal(e);
+                        handleAddWithSelectorModal(event);
                     }
                 } catch (Exception ex) {
                     LOGGER.error("Erreur lors du traitement du modal: {}", ex.getMessage(), ex);
-                    e.getHook().sendMessage("❌ Une erreur est survenue: " + ex.getMessage()).queue();
+                    event.getHook().sendMessage("❌ Une erreur est survenue: " + ex.getMessage()).queue();
                 }
             }
         }
@@ -686,25 +625,23 @@ public class ComResources extends Command {
             Document newItem = new Document();
 
             // Obtenir le nom et la description pour tous les types
-            String name = e.getValue("name").getAsString();
+            String name = Objects.requireNonNull(e.getValue("name")).getAsString();
             newItem.append("name", name);
 
             // Ajouter l'emoji seulement pour les sections qui en ont besoin
             if (sectionKey.equals(SECTION_CATEGORIES) || sectionKey.equals(SECTION_LINKS)) {
-                String emoji = e.getValue("emoji").getAsString();
+                String emoji = Objects.requireNonNull(e.getValue("emoji")).getAsString();
                 newItem.append("emoji", emoji);
             }
 
             if (sectionKey.equals(SECTION_LINKS)) {
-                String url = e.getValue("url").getAsString();
+                String url = Objects.requireNonNull(e.getValue("url")).getAsString();
                 newItem.append("url", url);
             } else if (!sectionKey.equals(SECTION_ROLES) && !sectionKey.equals(SECTION_CHANNELS)) {
-                // Pour les autres sections qui ne sont pas les rôles ou les salons
-                String description = e.getValue("description").getAsString();
+                String description = Objects.requireNonNull(e.getValue("description")).getAsString();
                 newItem.append("description", description);
             } else {
-                // Pour les rôles et les salons
-                String description = e.getValue("description").getAsString();
+                String description = Objects.requireNonNull(e.getValue("description")).getAsString();
                 newItem.append("description", description);
             }
 
@@ -725,23 +662,23 @@ public class ComResources extends Command {
             String sectionKey = parts[1];
             String oldName = parts[2];
             Document updatedItem = new Document();
-            String name = e.getValue("name").getAsString();
+            String name = Objects.requireNonNull(e.getValue("name")).getAsString();
             updatedItem.append("name", name);
 
             if (sectionKey.equals(SECTION_CATEGORIES) || sectionKey.equals(SECTION_LINKS)) {
-                String emoji = e.getValue("emoji").getAsString();
+                String emoji = Objects.requireNonNull(e.getValue("emoji")).getAsString();
                 updatedItem.append("emoji", emoji);
             }
 
             if (sectionKey.equals(SECTION_LINKS)) {
-                String url = e.getValue("url").getAsString();
+                String url = Objects.requireNonNull(e.getValue("url")).getAsString();
                 updatedItem.append("url", url);
             } else if (sectionKey.equals(SECTION_CHANNELS) || sectionKey.equals(SECTION_ROLES)) {
-                String id = e.getValue("id").getAsString();
-                String description = e.getValue("description").getAsString();
+                String id = Objects.requireNonNull(e.getValue("id")).getAsString();
+                String description = Objects.requireNonNull(e.getValue("description")).getAsString();
                 updatedItem.append("id", id).append("description", description);
             } else {
-                String description = e.getValue("description").getAsString();
+                String description = Objects.requireNonNull(e.getValue("description")).getAsString();
                 updatedItem.append("description", description);
             }
 
@@ -761,7 +698,7 @@ public class ComResources extends Command {
             String[] parts = e.getModalId().split(":");
             String sectionKey = parts[1];
             String itemName = parts[2];
-            String confirmation = e.getValue("confirm").getAsString();
+            String confirmation = Objects.requireNonNull(e.getValue("confirm")).getAsString();
             if (confirmation.equals("CONFIRMER")) {
                 removeItemFromSection(sectionKey, itemName)
                         .thenAccept(v -> e.getHook().sendMessage("✅ L'élément **" + itemName + "** a été supprimé avec succès.").queue(message -> {
@@ -781,7 +718,7 @@ public class ComResources extends Command {
         }
 
         private void handleServerNameModal(ModalInteractionEvent e) {
-            String serverName = e.getValue("server_name").getAsString();
+            String serverName = Objects.requireNonNull(e.getValue("server_name")).getAsString();
             ResourcesMessageHandler.updateServerName(serverName)
                     .thenAccept(v -> e.getHook().sendMessage("✅ Le nom du serveur a été mis à jour en **" + serverName + "**.").queue(message -> {
                         message.delete().queueAfter(3, java.util.concurrent.TimeUnit.SECONDS);
@@ -801,17 +738,17 @@ public class ComResources extends Command {
             String[] parts = e.getModalId().split(":");
             String sectionKey = parts[1];
             String entityId = parts[2];
-            String description = e.getValue("description").getAsString();
+            String description = Objects.requireNonNull(e.getValue("description")).getAsString();
             Document newItem = new Document();
             if (sectionKey.equals(SECTION_ROLES)) {
-                Role role = e.getGuild().getRoleById(entityId);
+                Role role = Objects.requireNonNull(e.getGuild()).getRoleById(entityId);
                 if (role == null) {
                     e.getHook().sendMessage("❌ Rôle introuvable.").queue();
                     return;
                 }
                 newItem.append("name", role.getName()).append("id", role.getId()).append("description", description);
             } else if (sectionKey.equals(SECTION_CHANNELS)) {
-                GuildChannel channel = e.getGuild().getGuildChannelById(entityId);
+                GuildChannel channel = Objects.requireNonNull(e.getGuild()).getGuildChannelById(entityId);
                 if (channel == null) {
                     e.getHook().sendMessage("❌ Salon introuvable.").queue();
                     return;
@@ -851,7 +788,7 @@ public class ComResources extends Command {
             MongoCollection<Document> collection = Main.getMongoConnection().getDatabase().getCollection(COLLECTION_NAME);
             Document configDoc = collection.find(new Document("type", "config")).first();
             if (configDoc == null) {
-                future.completeExceptionally(new IllegalStateException("Configuration non trouvée. Veuillez d'abord exécuter /resources update."));
+                future.completeExceptionally(new IllegalStateException("Configuration non trouvée. Veuillez d'abord exécuter /tr8 resources update."));
                 return future;
             }
 
@@ -899,7 +836,7 @@ public class ComResources extends Command {
             MongoCollection<Document> collection = Main.getMongoConnection().getDatabase().getCollection(COLLECTION_NAME);
             Document configDoc = collection.find(new Document("type", "config")).first();
             if (configDoc == null) {
-                future.completeExceptionally(new IllegalStateException("Configuration non trouvée. Veuillez d'abord exécuter /resources update."));
+                future.completeExceptionally(new IllegalStateException("Configuration non trouvée. Veuillez d'abord exécuter /tr8 resources update."));
                 return future;
             }
 
@@ -922,35 +859,25 @@ public class ComResources extends Command {
      * Helper method to get display name for a section
      */
     private String getSectionDisplayName(String sectionKey) {
-        switch (sectionKey) {
-            case SECTION_ROLES:
-                return "Rôles";
-            case SECTION_CATEGORIES:
-                return "Catégories";
-            case SECTION_CHANNELS:
-                return "Salons importants";
-            case SECTION_LINKS:
-                return "Liens utiles";
-            default:
-                return "Section";
-        }
+        return switch (sectionKey) {
+            case SECTION_ROLES -> "Rôles";
+            case SECTION_CATEGORIES -> "Catégories";
+            case SECTION_CHANNELS -> "Salons importants";
+            case SECTION_LINKS -> "Liens utiles";
+            default -> "Section";
+        };
     }
 
     /**
      * Helper method to get item name for a section (singular form)
      */
     private String getSectionItemName(String sectionKey) {
-        switch (sectionKey) {
-            case SECTION_ROLES:
-                return "Rôle";
-            case SECTION_CATEGORIES:
-                return "Catégorie";
-            case SECTION_CHANNELS:
-                return "Salon";
-            case SECTION_LINKS:
-                return "Lien";
-            default:
-                return "Élément";
-        }
+        return switch (sectionKey) {
+            case SECTION_ROLES -> "Rôle";
+            case SECTION_CATEGORIES -> "Catégorie";
+            case SECTION_CHANNELS -> "Salon";
+            case SECTION_LINKS -> "Lien";
+            default -> "Élément";
+        };
     }
 }
